--- a/inclusive-web/src/style.css
+++ b/inclusive-web/src/style.css
@@ -1,10 +1,14 @@
 @media (max-width: 700px){
   .requirements{
     order: 1;
+    background: #fff;
     flex-basis: 100%;
+    margin: 5px 0 !important;
   }
   .tags{
     order: 3;
+    background: #fff;
+    margin: 5px 0 !important;
     flex-basis: 100%;
   }
   .selection {
@@ -13,6 +17,8 @@
   }
   .moreInfo{
     order: 4;
+    background: #fff;
+    margin: 5px 0 !important;
     flex-basis: 100%;
   }
   .recruitmentTabs{
@@ -28,28 +34,26 @@
   }
   .requirements{
     order: 1;
-    border-right: none !important;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    background: #fff;
+    margin: 5px 0 !important;
     flex-basis: 33.33%;
   }
   .tags{
     order: 2;
-    border: 1px solid #d9d9d9;
     flex-basis: 33.33%;
+    margin: 5px 0 !important;
+    background: #fff;
   }
   .moreInfo{
+    margin: 5px 0 !important;
+    background: #fff;
     order: 3;
-    border-left: none !important;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
   }
   .selection{
     order: 4;
     flex-basis: 100%;
   }
   .recruitmentTabs{
-    border: 1px solid #d9d9d9;
     flex-basis: 33.33%;
     padding: 10px 20px;
   }
