--- a/inclusivo-app/app/src/main/res/layout/activity_add_company.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_company.xml
@@ -54,11 +54,21 @@
             android:orientation="vertical"
             android:paddingBottom="32dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="* All fields are compulsory"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="64dp">
+                android:layout_marginTop="32dp">
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="102dp"
@@ -129,7 +139,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="Title *"
+                android:text="Title"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
@@ -158,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
-                android:hint="Profile Description *"
+                android:hint="Profile Description"
                 app:boxStrokeColor="@color/primary_color"
                 app:boxStrokeWidth="1dp">
 
@@ -179,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
-                android:hint="Description *"
+                android:hint="Description"
                 app:boxStrokeColor="@color/primary_color"
                 app:boxStrokeWidth="1dp">
 
