--- a/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
@@ -23,12 +23,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/roboto_medium"
-            android:text="Add Initiative"
+            android:text="Add Story"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
+
+
+<ScrollView
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    android:layout_width="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
@@ -55,7 +65,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:context=".activities.AddInitiativeActivity">
 
         <TextView
@@ -183,5 +192,9 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
