--- a/inclusivo-app/app/src/main/res/layout/activity_view_job_application.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_view_job_application.xml
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:elevation="4dp"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
