Profile activity bug fixed

--- a/inclusivo-app/app/src/main/res/layout/activity_job_listing.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_job_listing.xml
@@ -58,7 +58,7 @@
             android:layout_marginStart="10dp"
             android:fontFamily="@font/roboto_medium"
             android:gravity="start"
-            android:layout_weight="4"
+            android:layout_weight="3.5"
             android:entries="@array/job_search_categories"
             android:inputType="phone"
             android:textColor="@color/black"
@@ -72,7 +72,7 @@
             android:layout_marginEnd="10dp"
             android:paddingHorizontal="5dp"
             android:layout_weight="5"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/varela_round"
             android:hint="Search"
             android:singleLine="true"
             android:imeOptions="actionSearch"
@@ -84,6 +84,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:padding="0dp"
+            android:layout_marginEnd="3dp"
             android:layout_weight="1"
             android:gravity="center"
             android:backgroundTint="@android:color/transparent"
