--- a/inclusivo-app/app/src/main/res/layout/activity_navigation.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_navigation.xml
@@ -21,6 +21,17 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/side_nav_menu">
 
+        <TextView
+            android:id="@+id/version_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Version"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="@font/varela_round"
+            android:layout_gravity="bottom|center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </com.google.android.material.navigation.NavigationView>
 
