--- a/inclusivo-app/app/src/main/res/layout/activity_profile.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_profile.xml
@@ -100,7 +100,7 @@
          <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/parent" >
 
         <LinearLayout
@@ -361,7 +361,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/varela_round"
-                android:text="Contact Number *"
+                android:text="Contact Number"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
@@ -381,7 +381,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/varela_round"
-                android:text="Alternate Contact Number *"
+                android:text="Alternate Contact Number"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
