--- a/inclusivo-app/app/src/main/res/layout/activity_view_job_application.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_view_job_application.xml
@@ -70,26 +70,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
-                android:fontFamily="@font/roboto_regular"
-                android:text="Current Status"
+                android:fontFamily="@font/varela_round"
+                android:text="Status"
+                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/status"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/status_chip"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:textStyle="bold"
                 android:fontFamily="@font/varela_round"
-                android:text="Pending"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -102,17 +103,55 @@
                     android:gravity="end"
                     android:text="Update"
                     android:textColor="@color/primary_color"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/info_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="Message"
+                android:layout_marginTop="16dp"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/extra_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/varela_round"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/ms_material_grey_400"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginVertical="30dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
+                android:fontFamily="@font/varela_round"
+                android:text="Profile"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
                 android:fontFamily="@font/roboto_regular"
                 android:text="E-mail"
+                android:layout_marginTop="16dp"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
