--- a/inclusivo-app/app/src/main/res/layout/activity_add_scholarship.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_scholarship.xml
@@ -155,7 +155,7 @@
                     android:fontFamily="@font/varela_round"
                     android:gravity="top"
                     android:inputType="textMultiLine|textCapSentences"
-                    android:minLines="3"
+                    android:minLines="5"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -514,7 +514,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/varela_round"
-        android:text="Add Scholarship"
+        android:text="Add"
         android:textAllCaps="false"
         android:textSize="14sp"
         app:cornerRadius="5dp"
