--- a/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
@@ -171,6 +171,8 @@
                 android:id="@+id/story_description_tie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:lines="5"
+                android:gravity="top"
                 android:fontFamily="@font/varela_round"
                 android:inputType="textMultiLine|textCapSentences"
                 android:textColor="@color/black"
