--- a/inclusivo-app/app/src/main/res/layout/activity_navigation.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_navigation.xml
@@ -12,6 +12,15 @@
         android:id="@+id/content_layout"
         layout="@layout/activity_main_content" />
 
+    <View
+        android:id="@+id/parent"
+        android:background="@color/white"
+        android:visibility="gone"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="?actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/main_nav_view"
