--- a/inclusivo-app/app/src/main/res/layout/company_overview_scholarship_rv_item.xml
+++ b/inclusivo-app/app/src/main/res/layout/company_overview_scholarship_rv_item.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
+    app:cardCornerRadius="0dp"
     android:focusable="true"
-    app:strokeColor="@color/ms_material_grey_400"
-    app:strokeWidth="1dp">
+    app:cardElevation="0dp"
+    app:strokeColor="#DFDFDF"
+    app:strokeWidth="0.5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,10 +28,11 @@
             android:id="@+id/save_layout"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/save_anim"
+                android:id="@+id/save_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:lottie_autoPlay="false"
