--- a/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_story.xml
@@ -53,11 +53,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateTintMode="src_atop"
-            android:layout_margin="10dp" />
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:lottie_rawRes="@raw/rainbow_loader"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"/>
     </com.google.android.material.card.MaterialCardView>
 
 
