--- a/inclusivo-app/app/src/main/res/menu/side_nav_menu.xml
+++ b/inclusivo-app/app/src/main/res/menu/side_nav_menu.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/my_account_menu"
-        android:title="My account" />
+            <group android:id="@+id/grp1">
+                <item
+                    android:id="@+id/my_account_menu"
+                    android:title="My account" />
 
-    <item
-        android:id="@+id/my_company"
-        android:title="My company" />
-    <item
-        android:id="@+id/applied_jobs"
-        android:title="Applied jobs" />
-    <item
-        android:id="@+id/saved_jobs_menu"
-        android:title="Saved jobs" />
-    <item
-        android:id="@+id/saved_scholarships_menu"
-        android:title="Saved scholarships" />
-    <item
-        android:id="@+id/subs_companies_menu"
-        android:title="Subscribed companies" />
+                <item
+                    android:id="@+id/my_company"
+                    android:title="My company" />
 
-    <item
-        android:id="@+id/about_menu"
-        android:title="About us"/>
-    <item
-        android:id="@+id/logout_menu"
-        android:title="Logout" />
+                <item
+                    android:id="@+id/saved_menu"
+                    android:title="Saved items"/>
+
+            </group>
+
+            <group android:id="@+id/grp2">
+                <item
+                    android:id="@+id/companies_menu_side"
+                    android:title="Companies"/>
+            </group>
+
+            <group android:id="@+id/grp3">
+                <item
+                    android:id="@+id/settings_menu"
+                    android:title="Settings"/>
+
+                <item
+                    android:id="@+id/about_menu"
+                    android:title="About"/>
+            </group>
 
 </menu>
