--- a/inclusivo-app/app/src/main/res/layout/activity_add_company.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_company.xml
@@ -28,17 +28,26 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ProgressBar
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progress_bar"
         android:elevation="3dp"
+        android:id="@+id/progress_bar"
+        android:background="@color/white"
         android:visibility="gone"
-        android:backgroundTint="@color/primary_color"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:lottie_rawRes="@raw/rainbow_loader"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"/>
+    </com.google.android.material.card.MaterialCardView>
 
 
     <ScrollView
