--- a/inclusivo-app/app/src/main/res/layout/activity_add_job.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_add_job.xml
@@ -576,7 +576,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:baselineAligned="false">
 
 
                 <com.google.android.material.textfield.TextInputLayout
