--- a/inclusivo-app/app/src/main/res/layout/activity_company_listing.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_company_listing.xml
@@ -84,6 +84,7 @@
             android:layout_height="match_parent"
             android:padding="0dp"
             android:layout_weight="1"
+            android:contentDescription="@string/cancel_search"
             android:gravity="center"
             android:backgroundTint="@android:color/transparent"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
