--- a/inclusivo-app/app/src/main/res/layout/activity_filter.xml
+++ b/inclusivo-app/app/src/main/res/layout/activity_filter.xml
@@ -115,7 +115,7 @@
                         android:fontFamily="@font/varela_round"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Salary :  " />
+                        android:text="Min. Salary (Rs.)" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -153,7 +153,7 @@
                         android:fontFamily="@font/varela_round"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Experience :  " />
+                        android:text="Min. Experience (Yrs)" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
