--- a/inclusivo-app/app/src/main/res/layout/status_help_bottomsheet.xml
+++ b/inclusivo-app/app/src/main/res/layout/status_help_bottomsheet.xml
@@ -66,7 +66,7 @@
         android:layout_marginHorizontal="16dp"
         android:text="@string/shortlisted_msg"/>
 
-    -<TextView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
