--- a/inclusivo-app/app/src/main/res/values/themes.xml
+++ b/inclusivo-app/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <style name="registered_via_spinner_style" parent="Widget.AppCompat.DropDownItem.Spinner">
