--- a/inclusivo-app/app/src/main/res/layout/applications_rv_item.xml
+++ b/inclusivo-app/app/src/main/res/layout/applications_rv_item.xml
@@ -15,16 +15,39 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/candi_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/varela_round"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textColor="@color/black" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/candi_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/varela_round"
+                android:textStyle="bold"
+                android:layout_weight="4"
+                android:textSize="16sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/varela_round"
+                android:textStyle="bold"
+                android:gravity="end"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/candi_job_role"
